--- a/share/po/zh_cn.po
+++ b/share/po/zh_cn.po
@@ -9,17 +9,56 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Audrey Tang <audreyt@audreyt.org>\n"
-"Language-Team: simplified Chinese\n"
+"Language-Team: Traditional Chinese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. ($_->[3])
+#: lib/Jifty/Action/Record/Search.pm:96
+#. ($label)
+msgid "%1 after"
+msgstr "%1 晚于"
+
+#: lib/Jifty/Action/Record/Search.pm:97
+#. ($label)
+msgid "%1 before"
+msgstr "%1 早于"
+
+#: lib/Jifty/Action/Record/Search.pm:93
+#. ($label)
+msgid "%1 contains"
+msgstr "%1 包含"
+
+#: lib/Jifty/Action/Record/Search.pm:100
+#. ($label)
+msgid "%1 greater than"
+msgstr "%1 大于"
+
+#: lib/Jifty/Action/Record/Search.pm:89
+#. ($label)
+msgid "%1 is not"
+msgstr "%1 不等于"
+
+#: lib/Jifty/Action/Record/Search.pm:94
+#. ($label)
+msgid "%1 lacks"
+msgstr "%1 不包含"
+
+#: lib/Jifty/Action/Record/Search.pm:101
+#. ($label)
+msgid "%1 less than"
+msgstr "%1 小于"
+
 #: share/web/templates/__jifty/halo:119
+#. ($_->[3])
 msgid "%1 seconds"
 msgstr "%1 秒"
 
-#: share/web/templates/__jifty/admin/index.html:49
+#: lib/Jifty/Web/Form/Field.pm:517
+msgid "@{[$self->current_value]}"
+msgstr ""
+
+#: share/web/templates/__jifty/admin/index.html:19
 msgid "Actions"
 msgstr "操作"
 
@@ -31,37 +70,49 @@ msgstr "系统管理模式开启中."
 msgid "Alert"
 msgstr "请注意"
 
-#: lib/Jifty/Action/Record/Create.pm:74 lib/Jifty/Action/Record/Create.pm~:74
+#: lib/Jifty/Action/Record/Create.pm:82
 msgid "An error occurred.  Try again later"
 msgstr "系统无法执行此项操作, 请稍后再试"
+
+#: lib/Jifty/Action/Record/Search.pm:105
+msgid "Any field contains"
+msgstr "任意字段包含"
+
+#: share/web/templates/__jifty/admin/fragments/list/update:28
+msgid "Cancel"
+msgstr "取消"
 
 #: share/web/templates/helpers/calendar.html:4
 msgid "Close window"
 msgstr "关闭窗口"
 
+#: share/web/templates/__jifty/admin/fragments/list/view:29
+msgid "Confirm delete?"
+msgstr "确定要删除?"
+
+#: lib/Jifty/Action/Record/Create.pm:81
 #. (ref($record)
-#: lib/Jifty/Action/Record/Create.pm:75 lib/Jifty/Action/Record/Create.pm~:75
 msgid "Create of %1 failed: %2"
 msgstr "无法建立 %1: %2"
 
-#: lib/Jifty/Action/Record/Create.pm:97 lib/Jifty/Action/Record/Create.pm~:97
+#: lib/Jifty/Action/Record/Create.pm:105
 msgid "Created"
 msgstr "成功建立项目."
 
-#: share/web/templates/__jifty/admin/index.html:34
+#: share/web/templates/__jifty/admin/index.html:3
 msgid "Database Administration"
 msgstr "数据瘤管理"
 
-#: lib/Jifty/Action/Record/Delete.pm:75
+#: lib/Jifty/Action/Record/Delete.pm:76
 msgid "Deleted"
 msgstr "成功删除项目."
 
-#: lib/Jifty/Web.pm:769 lib/Jifty/Web.pm~:768
+#:
 msgid "Dismiss"
 msgstr "关闭"
 
-#. ($comp_name)
 #: lib/Jifty/Mason/Halo.pm:104
+#. ($comp_name)
 msgid "Edit %1"
 msgstr "编辑 %1"
 
@@ -69,8 +120,8 @@ msgstr "编辑 %1"
 msgid "Go back home..."
 msgstr "回首页..."
 
-#. (Jifty->web->current_user->user_object->name)
-#: share/web/templates/_elements/sidebar:3
+#: share/web/templates/_elements/sidebar:5
+#. ($u->$method()
 msgid "Hiya, %1."
 msgstr "%1 您好."
 
@@ -86,11 +137,15 @@ msgstr "Jifty 线上 POD 文件"
 msgid "Loading..."
 msgstr "请稍候..."
 
-#: share/web/templates/__jifty/admin/index.html:40
+#: share/web/templates/__jifty/admin/index.html:9
 msgid "Models"
 msgstr "模型"
 
-#: lib/Jifty/Web.pm:273 lib/Jifty/Web.pm~:273
+#: lib/Jifty/Action/Record/Search.pm:106
+msgid "No field contains"
+msgstr "没有字段包含"
+
+#: lib/Jifty/Web.pm:297
 msgid "No request to handle"
 msgstr "没有可处理的要求"
 
@@ -98,17 +153,21 @@ msgstr "没有可处理的要求"
 msgid "Online Documentation"
 msgstr "线上文件"
 
-#: lib/Jifty/Record.pm:223 lib/Jifty/Record.pm:282 lib/Jifty/Record.pm:61
+#: lib/Jifty/Record.pm:240 lib/Jifty/Record.pm:319 lib/Jifty/Record.pm:60
 msgid "Permission denied"
 msgstr "权限不足."
 
-#: lib/Jifty/Record.pm:84
+#:
 msgid "Record created"
 msgstr "成功建立项目."
 
 #: share/web/templates/__jifty/halo:111
 msgid "SQL Statements"
 msgstr "SQL 陈述式"
+
+#: share/web/templates/__jifty/admin/fragments/list/update:18
+msgid "Save"
+msgstr "储存"
 
 #: share/web/templates/__jifty/online_docs/content.html:50
 msgid "Schema"
@@ -118,19 +177,31 @@ msgstr "纲要"
 msgid "Something's not quite right"
 msgstr "系统错误"
 
-#: share/web/templates/__jifty/online_docs/index.html:16
-#: share/web/templates/__jifty/online_docs/index.html:18
+#: share/web/templates/__jifty/online_docs/index.html:16 share/web/templates/__jifty/online_docs/index.html:18
 msgid "Table of Contents"
 msgstr "目录"
 
-#: share/web/templates/__jifty/admin/index.html:36
-msgid ""
-"This console lets you manage the records in your Jifty database. Below, you "
-"should see a list of all your database tables. Feel free to go through and "
-"add, delete or modify records."
+#: lib/Jifty/Action.pm:874
+msgid "That doesn't look like a correct value"
+msgstr "字段格式错误."
+
+#: lib/Jifty/Action/Record.pm:247
+msgid "That doesn't look right, but I don't know why"
+msgstr "字段内容错误."
+
+#: lib/Jifty/Action/Record.pm:179
+msgid "The passwords you typed didn't match each other"
+msgstr "两组口令不符合."
+
+#: lib/Jifty/Web.pm:360
+msgid "There was an error completing the request.  Please try again later."
+msgstr "系统执行错误, 请稍候再试."
+
+#: share/web/templates/__jifty/admin/index.html:5
+msgid "This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records."
 msgstr "您可利用此界面来管理数据库的内容. 请点选表格名称, 进行增删及编辑."
 
-#: lib/Jifty/Action/Record/Update.pm:152
+#: lib/Jifty/Action/Record/Update.pm:156
 msgid "Updated"
 msgstr "成功更新项目."
 
@@ -139,13 +210,14 @@ msgid "Welcome to your new Jifty application"
 msgstr "欢迎光临您崭新的 Jifty 应用程序"
 
 #: share/web/templates/dhandler:5
-msgid ""
-"You got to a page that we don't think exists.  Anyway, the software has "
-"logged this error. Sorry about this."
+msgid "You got to a page that we don't think exists.  Anyway, the software has logged this error. Sorry about this."
 msgstr "抱歉, 此页面不存在, 系统已留下纪录."
 
-#. ('http://hdl.loc.gov/loc.pnp/cph.3c13461')
+#: lib/Jifty/Action.pm:861
+msgid "You need to fill in this field"
+msgstr "此字段不能留空."
+
 #: share/web/templates/index.html:3
+#. ('http://hdl.loc.gov/loc.pnp/cph.3c13461')
 msgid "You said you wanted a pony. (Source %1)"
 msgstr "您可不正是想要一匹小马吗? (参见 %1)"
-
