--- a/share/po/zh_cn.po
+++ b/share/po/zh_cn.po
@@ -49,6 +49,11 @@ msgstr "%1 不包含"
 msgid "%1 less than"
 msgstr "%1 小于"
 
+#: share/web/templates/__jifty/error/mason_internal_error:30 share/web/templates/__jifty/error/mason_internal_error:34 share/web/templates/__jifty/error/mason_internal_error:38
+#. ($path, $line)
+msgid "%1 line %2"
+msgstr "%1 第 %2 列"
+
 #: share/web/templates/__jifty/halo:119
 #. ($_->[3])
 msgid "%1 seconds"
@@ -78,6 +83,19 @@ msgstr "系统无法执行此项操作, 请稍后再试"
 msgid "Any field contains"
 msgstr "任意字段包含"
 
+#: share/web/templates/__jifty/admin/action/dhandler:25 share/web/templates/__jifty/admin/model/dhandler:20
+msgid "Back to the admin console"
+msgstr "回到管理界面"
+
+#: share/web/templates/__jifty/admin/index.html:29
+msgid "Back to the application"
+msgstr "回到应用程序"
+
+#: share/web/templates/helpers/calendar.html:4
+#. (_ &><body class="calpopup"><a href="#" onclick="window.close()
+msgid "Calendar"
+msgstr "日历"
+
 #: share/web/templates/__jifty/admin/fragments/list/update:28
 msgid "Cancel"
 msgstr "取消"
@@ -89,6 +107,10 @@ msgstr "关闭窗口"
 #: share/web/templates/__jifty/admin/fragments/list/view:29
 msgid "Confirm delete?"
 msgstr "确定要删除?"
+
+#: share/web/templates/__jifty/admin/fragments/list/new_item:17
+msgid "Create"
+msgstr "建立"
 
 #: lib/Jifty/Action/Record/Create.pm:81
 #. (ref($record)
@@ -103,6 +125,10 @@ msgstr "成功建立项目."
 msgid "Database Administration"
 msgstr "数据瘤管理"
 
+#: share/web/templates/__jifty/admin/fragments/list/view:26
+msgid "Delete"
+msgstr "删除"
+
 #: lib/Jifty/Action/Record/Delete.pm:76
 msgid "Deleted"
 msgstr "成功删除项目."
@@ -110,6 +136,10 @@ msgstr "成功删除项目."
 #:
 msgid "Dismiss"
 msgstr "关闭"
+
+#: share/web/templates/__jifty/admin/fragments/list/view:37
+msgid "Edit"
+msgstr "编辑"
 
 #: lib/Jifty/Mason/Halo.pm:104
 #. ($comp_name)
@@ -137,9 +167,17 @@ msgstr "Jifty 线上 POD 文件"
 msgid "Loading..."
 msgstr "请稍候..."
 
+#: share/web/templates/__jifty/error/mason_internal_error:1
+msgid "Mason error"
+msgstr "Mason 系统错误"
+
 #: share/web/templates/__jifty/admin/index.html:9
 msgid "Models"
 msgstr "模型"
+
+#: share/web/templates/__jifty/admin/fragments/list/list:73
+msgid "Next Page"
+msgstr "下一页"
 
 #: lib/Jifty/Action/Record/Search.pm:106
 msgid "No field contains"
@@ -153,13 +191,26 @@ msgstr "没有可处理的要求"
 msgid "Online Documentation"
 msgstr "线上文件"
 
+#: share/web/templates/__jifty/admin/fragments/list/list:45
+#. ($page, $collection->pager->last_page)
+msgid "Page %1 of %2"
+msgstr "第 %1 页, 共 %2 页"
+
 #: lib/Jifty/Record.pm:240 lib/Jifty/Record.pm:319 lib/Jifty/Record.pm:60
 msgid "Permission denied"
 msgstr "权限不足."
 
+#: share/web/templates/__jifty/admin/fragments/list/list:68
+msgid "Previous Page"
+msgstr "上一页"
+
 #:
 msgid "Record created"
 msgstr "成功建立项目."
+
+#: share/web/templates/__jifty/admin/action/dhandler:20
+msgid "Run the action"
+msgstr "执行动作"
 
 #: share/web/templates/__jifty/halo:111
 msgid "SQL Statements"
@@ -172,6 +223,10 @@ msgstr "储存"
 #: share/web/templates/__jifty/online_docs/content.html:50
 msgid "Schema"
 msgstr "纲要"
+
+#: share/web/templates/__jifty/admin/fragments/list/search:18
+msgid "Search"
+msgstr "搜寻"
 
 #: share/web/templates/dhandler:1
 msgid "Something's not quite right"
@@ -200,6 +255,14 @@ msgstr "系统执行错误, 请稍候再试."
 #: share/web/templates/__jifty/admin/index.html:5
 msgid "This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records."
 msgstr "您可利用此界面来管理数据库的内容. 请点选表格名称, 进行增删及编辑."
+
+#: share/web/templates/__jifty/admin/fragments/list/list:38
+msgid "Toggle search"
+msgstr "切换搜寻画面"
+
+#: share/web/templates/__jifty/error/mason_internal_error:6
+msgid "Try again"
+msgstr "再试一下"
 
 #: lib/Jifty/Action/Record/Update.pm:156
 msgid "Updated"
