my first commit: * json web services fixed * added myself in AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2257 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,3 +20,4 @@ Paul Fenwick <pjf@perltraining.com.au>
 Edmund von der Burg <evdb@ecclestoad.co.uk>
 Yves Agostini <agostini@univ-metz.fr>
 Agent Zhang <agentzh@gmail.com>
+Pawel Murias <pmurias@woobling.org>
