* Jifty::Manual::Upgrading - Remove the now-obsoleted claim that one has   to "use" model classes before renaming it.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2274 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Upgrading.pod
+++ b/lib/Jifty/Manual/Upgrading.pod
@@ -58,17 +58,16 @@ will be run in version order until the application is up to date.
 
 =head3 Renaming a column
 
-To rename a column use C<rename> inside your C<since>.  You will also
-have to use the model class at the top of Upgrade.pm so Jifty can
-access it's schema definition.
+To rename a column, simply call C<rename> inside your C<since> code block:
 
-use MyApp::Model::User;
+    use MyApp::Model::User;
 
-since '0.61' => sub {
-  rename (table => 'MyApp::Model::User', 
-	  column => 'zip', 
-	  to => 'postcode'
-	 );
-};
+    since '0.6.1' => sub {
+        rename(
+            table   => 'MyApp::Model::User', 
+            column  => 'zip', 
+            to      => 'postcode'
+        );
+    };
 
 =head3 Migrating data
